# FTCircuitBench

./: .gitignore  FTCircuitBench_Pipeline_Demo.ipynb  LICENSE  README.md  analyze_circuit.py  generate_benchmarks.py  optimized_circuit.qasm  pyproject.toml  requirements.txt
chtc/: README.md  RUN_SUMMARY.md  ftc_generate.sub  run_generate_benchmarks_chtc.sh
circuit_benchmarks/: 5trotter_hamiltonian_pbc_stats.csv  ct_stats.csv  pbc_stats.csv
circuit_benchmarks/hamiltonians_5trotter/: ct_stats.csv
circuit_benchmarks/hhl/hhl_12q/GS/: comparison_summary.md
circuit_benchmarks/hhl/hhl_12q/SK/: comparison_summary.md
circuit_benchmarks/hhl/hhl_4q/GS/: comparison_summary.md
circuit_benchmarks/hhl/hhl_4q/SK/: comparison_summary.md
circuit_benchmarks_ard_1/: cmd.md
circuit_stats_output/: hhl_12q_gs_prec5_stats.json  hhl_7q_gs_prec5_stats.json  qft_18q_gs_prec5_stats.json  qft_18q_sk_rec1_stats.json  qft_18q_sk_rec2_stats.json  qft_4q_gs_prec5_stats.json  qft_4q_sk_rec1_stats.json
docs/: api.md  examples.md  index.md  installation.md
ftcircuitbench/: __init__.py  api.py  benchmark_utils.py  fidelity.py  py.typed
ftcircuitbench/analyzer/: __init__.py  clifford_t_analyzer.py  pbc_analyzer.py  visualization.py
ftcircuitbench/decomposer/: decomposer.py
ftcircuitbench/parser/: qasm_parser.py
ftcircuitbench/pbc_converter/: __init__.py  nwqec_adapter.py  pbc_circuit_reader.py  pbc_circuit_saver.py  pbc_generator.py  pbm.py  r_pauli_circ.py  tab_gate.py
ftcircuitbench/transpilers/: __init__.py  cpp_gs_transpiler.py  gs_transpiler.py  nwqec_ct.py  nwqec_pbc.py  sk_transpiler.py
misc/: FTCircuitBench.code-workspace  README.md  draw_qasm_comparison.ipynb  export_stats_to_csv.py  generate_pipeline_comparison_table.py  inspect_sk_gates.py  plot_gs_prec8_stacked_clifford_t_counts.py  plot_gs_prec_fidelity_vs_gatecount.py  plot_gs_prec_histogram_by_stat.py  plot_pbc_reduction_by_circuit.py  run_sk_fidelity_test.py  show_pbc_layers.py
qasm/hhl/: hhl_circuit.py
tests/: TEST_SUMMARY.md  run_fidelity_tests.py  test_circuit_data_structure.py  test_corrected_transpilers.py  test_fidelity.py  test_fidelity_behavior.py  test_performance_summary.py  testing_profiled.py
(+278 files in other folders)
